Added: - main activity ui with icons drawables, - populating ui with data from ui, - storing last downloaded data i shared preferences for use when there's no internet connection.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">WeatherApp</string>
     <string name="please_wait">Please wait</string>
+    <string name="image">Image</string>
+    <string name="miles_per_hour">Miles per hour</string>
+    <string name="refresh">Refresh</string>
 </resources>
